{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "daa0b1b0-1007-4fe5-9f7b-dc8386312929",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "e31a7d37-5466-4f4a-b25d-26c7b55ca925",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "dde97890-a73f-448e-ba1a-ecf773657ba7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "904223fc-72ad-4662-8a1f-961ef2e47516",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash Forward",
                    "type": "Button",
                    "id": "1d7afaff-2939-4ad5-a01f-18134adcacea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash Backward",
                    "type": "Button",
                    "id": "1aa6a69d-4d82-4c7b-89d3-cfee163d5971",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e16332e0-ea30-4df0-9a61-90b3e2c71a2a",
                    "path": "<HID::Twin USB Gamepad      >/hat",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "4bc68463-0068-423c-b321-c722bfa69bfc",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Left",
                    "id": "961e1ab8-3d02-4bdc-b0de-087589ffdb92",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "ed95d542-d7bc-44be-bb05-d4ab4fb0231c",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d4a33371-e821-4676-b807-5583673f80fe",
                    "path": "<HID::Twin USB Gamepad      >/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efb79e6c-4437-44e5-a8b7-36217ac89016",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1eb98009-ed57-4737-95ce-5cfab63e62d3",
                    "path": "<HID::Twin USB Gamepad      >/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a8c68da-ee65-404a-bb6c-c59af3bd8526",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5bb0578-4933-4008-820f-4ecf15c82337",
                    "path": "<HID::Twin USB Gamepad      >/hat/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82ea0cd3-818b-48ce-b7da-6c4a59774365",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff4d0439-30ff-4111-9b60-8fb1f71c0e80",
                    "path": "<HID::Twin USB Gamepad      >/hat/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash Backward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55083192-7582-4d49-acbf-3024ac11d06a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash Backward",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Gameplay2",
            "id": "89ab370a-9348-4b25-9c7b-0d90856e25c0",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "d3078f46-567c-484f-a1f0-7186fdf91fc6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c756ac06-791c-4811-a29d-18c11b2901c5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "786ec743-484c-48f5-894d-5fda6d839194",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash Forward",
                    "type": "Button",
                    "id": "c5998443-a280-4872-abcd-1aa754b4de38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash Backward",
                    "type": "Button",
                    "id": "ae253f32-b401-46d1-9d2e-cd60ffbeac47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keys",
                    "id": "ccfa0cc4-69ac-4efe-b418-6ea475f6b768",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Left",
                    "id": "970ebd16-1c45-476f-b84a-49828de0bf45",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "55789e53-4f30-4d1e-a7fa-8de17d973132",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a9d9b3b2-f2c8-4483-9e3f-2f8945ca54dc",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3833efa5-d1ad-49ee-89c3-cfaa3887a02a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a124a7db-92a7-4722-9776-4b4356036e2f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0c41d4f-aefe-4808-ae2d-9f29f17a16bd",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash Backward",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UiNavigation",
            "id": "0b1c202b-68d5-4e63-9c8e-1f4066a6355a",
            "actions": [
                {
                    "name": "ChangeCharacterRight",
                    "type": "Button",
                    "id": "a1dc10e9-723a-4587-884a-ef034e2cf7a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeCharacterLeft",
                    "type": "Button",
                    "id": "79085d64-7951-4db9-a532-063d88cf8a42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "5f5680f1-ff3b-4c66-bdbc-f3a63560e701",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "b1ac082f-677c-4b5d-abe7-7bc2a3726a9e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d75e7a58-a366-4275-a9f3-f33f383073a8",
                    "path": "<HID::Twin USB Gamepad      >/hat/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeCharacterRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "915584a3-c55b-4bc0-917e-3088ed7f6b33",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeCharacterRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ba604c6-a092-480d-a677-e21bbcfd1558",
                    "path": "<HID::Twin USB Gamepad      >/hat/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeCharacterLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b66e4099-f62a-40ab-a03c-0685db668f9c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeCharacterLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62ef2fcf-3f79-4f13-a4bf-323ad2a9e25c",
                    "path": "<HID::Twin USB Gamepad      >/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5ca3646-17fb-43b8-9e44-6c4f98b2ceac",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "979014d5-ae06-4c0d-bee6-f81fb796ca6b",
                    "path": "<HID::Twin USB Gamepad      >/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "058948b1-80b4-4fc7-a1e3-27dc26a1bf67",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UiNavigation2",
            "id": "163901f6-0d13-421f-953b-a6525e8fab82",
            "actions": [
                {
                    "name": "ChangeCharacterRight",
                    "type": "Button",
                    "id": "e605a82b-3afb-462c-b2da-5aec8b3b2b9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeCharacterLeft",
                    "type": "Button",
                    "id": "34f867f2-286b-4259-8261-1c0b013cb1e5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "130ff51f-f17e-42ce-a59d-e0417d488844",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "6303f7e5-0d02-4753-a720-846c9970f0de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2e8108b2-8449-4a51-8b4c-1af10d10165f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeCharacterRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a6d5999-673b-47ff-8f66-7ee8a6d9bddc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeCharacterLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6217b04-fd0e-4a80-a2d4-0e98a43d8928",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf178b63-4f81-4a29-b9b2-15ee5450cbe4",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}